--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Video Player</title>
+    <title>Web Video Player</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>YouTube Video Player</h1>
+        <h1>Web Video Player</h1>
         <div class="video-input">
             <input type="text" id="video-link" placeholder="Paste YouTube URL">
             <button onclick="loadVideo()">Load Video</button>
